# dscoding-projects

./: README.md  requirements.txt
Akash.Mittal/: Project_Description  Readme.md  app.ipynb  app.py  main.ipynb  main.py  main_bkup.ipynb
Damir.Uvayev/: main.py
Inas.elkouch/: 0.FINAL_PROJECT.ipynb  README.md  main.py  map.py  planner.py
Karan.Kooshavar/: Quiz_class.py  alls_cleaning.ipynb  main.py  questions.py  quiz_class_file.py  the_quiz.ipynb
Nazar.Liubas/: Preliminary_data_analysis.ipynb  Presentation.ipynb  check_if_path_exists_with_bfs.py  cities_map.html  city.py  data_full.json  data_saver.py  requirements.txt  traveler.py
Nikita.Olefir/: .gitignore  Main.ipynb  README.md  requirements.txt  trial.ipynb
Samaher.Brahem/: README.md  app.py  data_manager.py  final_presentation.ipynb  game_scores.json  main.py  quiz.py  quiz_st.py  quiz_st_bu.py
Viola.Awor/: main_Weather.py  route_between_cities.py  test_route_between_cities-checkpoint.ipynb  test_route_between_cities.py  weatherproject.ipynb
aidana.akkaziyeva/: README.md
dilsan.oksuzoglu/: Project_notebook.ipynb  classes.py  project_functions.py  run_streamlit.py
franco.bonifacini/: usage.ipynb
juliamaria.wdowinska/: README.md  count_vectorizer.joblib  lr_classifier_count_vectorized.joblib  lr_classifier_tfidf_vectorized.joblib  main.py  tfidf_vectorizer.joblib
luigi.gallo/QuizProject/: pyproject.toml
luigi.gallo/QuizProject/quizproject/: main.py  quiz_functions.py
michele.coaro/: README.md
michele.coaro/Project/: Classes.py  main.py  pyproject.toml
niccolo.cibei/travel_project/: README.md  app_travel.py  pyproject.toml  usage.ipynb
niccolo.cibei/travel_project/travel_project/: data.py  methods.py  plotting.py
payam.soltanzadeh/: Availability_allocation_strategy.py  Customer_Preference_strategy.py  MAIN NOOTBOOK.ipynb  Project - Full.py  Readme  (+3 more)
sara.peri/progetto_dse/: README.md  pyproject.toml
sara.peri/progetto_dse/progetto_dse/: app_weather.py  datasets.py  dati.py  mappe.py  statistiche.py
stefano.bruschi/: 10azie.ipynb  ETFS.ipynb  Ex.py  MYman.py  NASDAQ.ipynb  README.md  Removing.ipynb  STOCKS.ipynb  Webbe.py  main.py  pyproject.toml  symbols_valid_meta.csv
stefano.bruschi/project/: main.py  webbe.py
stefano.bruschi/tests/: ETFS.ipynb  Experiment.ipynb  Removing.ipynb  STOCKS.ipynb
(+187 files in other folders)
