[tool.poetry]
name = "progettempo"
version = "0.1.0"
description = ""
authors = ["Michele Coaro <michele.coaro@studenti.unimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
plotly = "^5.18.0"
pycountry-convert = "^0.7.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
streamlit = "^1.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
