[tool.poetry]
name = "travel-project"
version = "0.1.0"
description = ""
authors = ["Niccolo901 <niccolo.cibei@studenti.unimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pycountry-convert = "^0.7.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
haversine = "^2.8.0"
networkx = "^3.2.1"
plotly-express = "^0.4.1"
plotly = "^5.18.0"
streamlit = "^1.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
