[tool.poetry]
name = "progetto-dse"
version = "0.1.0"
description = ""
authors = ["Sara Peri <sara.peri218@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.1.1"
plotly = "^5.17.0"
numpy = "^1.26.1"
streamlit = "^1.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
